# cppgrpcft

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
app/: args_parser.h  client.cc  server.cc
proto/: file.grpc.pb.cc  file.grpc.pb.h  file.pb.cc  file.pb.h  file.proto  io.grpc.pb.cc  io.grpc.pb.h  io.pb.cc  io.pb.h  io.proto
src/: file_interfaces.h  io_client.cc  io_client.h  io_defer.h  io_interfaces.h  io_server.cc  io_server.h
tests/: cppgrpcft_bytes_test.cc  cppgrpcft_files_test.cc  cppgrpcft_metadata_test.cc  cppgrpcft_test.cc  utils.cc  utils.h
